--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -32,7 +32,7 @@
                     </p>
                     <a href="#" class="btn btn-sm flat btn-remove"
                        th:onclick="return confirm('Opravdu odebrat nápovědu?')"
-                       th:href="@{/game/progress/revertHint(teamId=${team.teamId}, hintId=${hintTaken.hint.hintId}, cypherId=${cypher.cypherId})}" th:autofocus="true">
+                       th:href="@{/game/progress/revertHint(teamId=${team.teamId}, hintId=${hintTaken.hint.hintId}, cypherId=${cypher.cypherId})}">
                         Odebrat nápovědu
                     </a>
                 </div>
