--- a/src/main/resources/templates/client/contact.html
+++ b/src/main/resources/templates/client/contact.html
@@ -17,27 +17,17 @@
 <body>
 <div th:insert="client/fragments/header :: header(contact)"></div>
 <div class="container">
-    <h2>Kontakt</h2>
-    <div class="table-responsive">
-        <table class="table">
-            <thead class="thead-light">
-            <tr>
-                <th scope="col">Kontaktní osoba</th>
-                <th scope="col">Telefon</th>
-                <th scope="col">Web</th>
-                <th scope="col">Facebook</th>
-            </tr>
-            <tr th:if="${contact == ''}">
-                <td colspan="9"><p> Není zadaná kontaktní osoba</p></td>
-            </tr>
-            </thead>
-            <tbody>
-                <td th:text="${contact.name}">Jmeno</td>
-                <td th:text="${contact.phoneNumber}" align="center">Telefon</td>
-                <td th:text="${contact.webPages}">www</td>
-                <td th:text="${contact.fcbEvent}">facebook</td>
-            </tbody>
-        </table>
+    <div class="row">
+        <div class="col-sm-12">
+            <h1>Kontakt</h1>
+            <h2>Kontaktní osoba</h2>
+            <p th:text="${contact.name}">Jmeno</p>
+            <h2>Telefon</h2>
+            <p th:text="${contact.phoneNumber}" align="center">Telefon</p>
+            <h2>Odkazy</h2>
+            <a th:href="${contact.webPages}">CN Group</a>
+            <a th:href="${contact.fcbEvent}">Facebook</a>
+        </div>
     </div>
 </div>
 </body>
