pridana validace pro max delku team name sjednocena Falesna odpoved ve vsech tabulkach

--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -29,7 +29,7 @@
                 <th scope="col">Souřadnice</th>
                 <th scope="col">Popis místa</th>
                 <th scope="col">Odpověď</th>
-                <th scope="col">Špatná odpověď</th>
+                <th scope="col">Falešná odpověď</th>
                 <th scope="col">Bonus</th>
                 <th scope="col" align="center">Akce</th>
             </tr>
