--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -26,7 +26,7 @@
                 <th scope="col">Souřadnice</th>
                 <th scope="col">Popis místa</th>
                 <th scope="col">Odpověď</th>
-                <th scope="col">Špatná odpověď</th>
+                <th scope="col">Falešná odpověď</th>
                 <th scope="col">Bonus</th>
             </tr>
             </thead>
