Change style of required fields in admin forms

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -403,6 +403,11 @@ a:hover{
     width: 90%;
 }
 
+.input-value-required::after {
+    content: " *";
+    color: red
+}
+
 /** Login page */
 .login-page-body {
     background-image: url('/img/login-background-mobile-large.jpg');
