--- a/src/main/resources/templates/contact/form.html
+++ b/src/main/resources/templates/contact/form.html
@@ -30,8 +30,8 @@
                     <input id="contactId" class="form-control" th:field="*{contactId}" readonly/>
                 </div>
                 <div class="form-group">
-                    <label for="title">Jméno</label>
-                    <input id="title" class="form-control" th:field="*{name}"/>
+                    <label for="title" class="input-value-required">Jméno</label>
+                    <input id="title" class="form-control" th:field="*{name}" required/>
                     <p class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error.</p>
                 </div>
                 <div class="form-group">
