--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -25,14 +25,14 @@
                 <input type="hidden" th:field="*{pin}"/>
                 <input type="hidden" th:field="*{user}"/>
                 <div class="form-group">
-                    <label for="name">Jméno: (*)</label>
-                    <input id="name" class="form-control" type="text" th:field="*{name}"/>
+                    <label for="name" class="input-value-required">Jméno</label>
+                    <input id="name" class="form-control" type="text" th:field="*{name}" required/>
                     <p class="error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Chyba - Jméno
                     </p>
                 </div>
                 <div class="form-group">
-                    <label for="numberOfMembers">Počet členů: (*)</label>
-                    <input id="numberOfMembers" class="form-control" type="number" th:field="*{numOfMembers}"/>
+                    <label for="numberOfMembers" class="input-value-required">Počet členů</label>
+                    <input id="numberOfMembers" class="form-control" type="number" th:field="*{numOfMembers}" required/>
                     <p class="error" th:if="${#fields.hasErrors('numOfMembers')}" th:errors="*{numOfMembers}">Chyba - Počet členů
                     </p>
                 </div>
