Change final place button title in menu

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="/admin/team">Týmy</a>
                     </li>
                     <li class="nav-item" th:class="${activeTab == 'finalplace'}? 'active' : null">
-                        <a class="nav-link" href="/admin/finalplace/">Místo zakončení</a>
+                        <a class="nav-link" href="/admin/finalplace/">Místo vyhlášení</a>
                     </li>
                     <li class="nav-item" th:class="${activeTab == 'contact'}? 'active' : null">
                         <a class="nav-link" href="/admin/contact/">Kontakt</a>
