--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -31,7 +31,7 @@
                 <th scope="col">Odpověď</th>
                 <th scope="col">Falešná odpověď</th>
                 <th scope="col">Bonus</th>
-                <th scope="col" align="center">Akce</th>
+                <th scope="col">Akce</th>
             </tr>
             <tr th:if="${cyphers.empty}">
                 <td colspan="9"><p> V systému nejsou šifry</p></td>
@@ -39,15 +39,15 @@
             </thead>
             <tbody>
             <tr th:each="cypher : ${cyphers}">
-                <td th:text="${cypher.cypherId}" align="center">cypherId</td>
+                <td th:text="${cypher.cypherId}">cypherId</td>
                 <td th:text="${cypher.name}">Jmeno</td>
-                <td th:text="${cypher.stage}" align="center">Cislo</td>
+                <td th:text="${cypher.stage}">Cislo</td>
                 <td th:text="${cypher.location}">X, Y</td>
                 <td th:text="${cypher.placeDescription}">Popis mista</td>
                 <td th:text="${cypher.codeword}">codove slovo</td>
                 <td th:text="${cypher.trapCodeword}">Past</td>
                 <td th:text="${cypher.bonusContent}">Bonus</td>
-                <td align="center">
+                <td>
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Akce
                         <span class="caret"></span>
                     </button>
@@ -60,8 +60,8 @@
             </tr>
 
             <tr>
-                <td colspan="9" align="center">
-                    <a type="button" href="#" class="btn btn-primary" th:href="@{/admin/cypher/add}">Přidat</a>
+                <td colspan="9">
+                    <a href="#" class="btn btn-primary" th:href="@{/admin/cypher/add}">Přidat</a>
                 </td>
 
             </tr>
