Change cypher detail template to be HTML valid
- Changed meta viewport tag
- Removed extra tags
- Removed obsolete align=center attributes from th and td

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -395,6 +395,10 @@ a:hover{
     color: white;
 }
 
+.col-centered {
+    text-align: center;
+}
+
 /** Login page */
 .login-page-body {
     background-image: url('/img/login-background-mobile-large.jpg');
