--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -399,6 +399,10 @@ a:hover{
     text-align: center;
 }
 
+.img-billy {
+    width: 90%;
+}
+
 /** Login page */
 .login-page-body {
     background-image: url('/img/login-background-mobile-large.jpg');
