--- a/src/main/resources/templates/client/cypher/trap.html
+++ b/src/main/resources/templates/client/cypher/trap.html
@@ -1,48 +1,28 @@
 <!DOCTYPE html>
-<html lang="cs" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta charset="UTF-8">
-    <title>Hahahaaa</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <title>Hahaha</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbarRed" >
-        <div class="navbarContentCentered">
+    <div th:insert="client/fragments/header :: header('')"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <p>Tak tohle není správná odpověď 3:] - <a href="#" onclick="javascript:history.go(-1)">zkusit znovu</a></p>
+            </div>
+            <div class="col-sm-12 col-centered">
+                <img src="/img/billy.jpg" alt="Billy Saw" class="img-billy"/>
+            </div>
         </div>
-
-        <button id="navbarButton" class="btn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
-                aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text">
-                    <i class="fa fa-bars"></i></span>
-        </button>
-        <div class="collapse navbar-collapse collapsedNavbar" id="navbarSupportedContent1">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Šifry </a>
-                </li>
-                <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Kartička</a>
-                </li>
-                <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Kontakty</a>
-                </li>
-                <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Odhlásit se</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="bodyContent ">
-        Gotcha!!! - <a href="#" onclick="javascript:history.go(-1)">Jít zpět</a>
-        <br />
-        <img src="/img/billy.jpg" alt="Billy Saw" />
     </div>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
