--- a/src/main/resources/templates/finalplace/form.html
+++ b/src/main/resources/templates/finalplace/form.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="form-group">
                     <label for="location">Souřadnice</label>
-                    <input id="location" class="form-control" type="text" th:field="*{location}"/>
+                    <input id="location" class="form-control" type="text" th:field="*{location}" readonly/>
                     <small id="locationHelp" class="form-text text-muted">Kliknutím do mapy nastavíte souřadnice.</small>
                     <p class="error" th:if="${#fields.hasErrors('location')}" th:errors="*{location}">Location error.</p>
                 </div>
