--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -22,7 +22,7 @@
             <h1>Týmy</h1>
             <p class="subheading" th:text="${cypher.name}"></p>
             <div th:if="${teams.empty}">
-                <p>V systému nejsou šifry<p/>
+                <p>V systému nejsou týmy<p/>
             </div>
 
             <div th:each="team : ${teams}" class="team">
