--- a/src/main/resources/templates/score/list.html
+++ b/src/main/resources/templates/score/list.html
@@ -18,13 +18,13 @@
 <div class="container">
     <h2>Pořadí týmů podle skóre</h2>
     <div class="table-responsive">
-        <table class="table" border="1">
+        <table class="table table-striped">
             <thead>
             <tr>
-                <th>Id týmu</th>
-                <th>Jméno týmu</th>
-                <th>Skóre</th>
-                <th>Akce</th>
+                <th class="col-centered">Id týmu</th>
+                <th class="col-centered">Jméno týmu</th>
+                <th class="col-centered">Skóre</th>
+                <th class="col-centered">Akce</th>
             </tr>
             <tr th:if="${teamsWithScores.empty}">
                 <td colspan="4"><p> V systému nejsou týmy</p></td>
@@ -32,16 +32,16 @@
             </thead>
             <th:block th:each="teamWithScore : ${teamsWithScores}">
                 <tr>
-                    <td th:text="${teamWithScore.team.teamId}" align="center">1</td>
-                    <td th:text="${teamWithScore.team.name}" align="center">Borci</td>
-                    <td align="center">
+                    <td th:text="${teamWithScore.team.teamId}" class="col-centered">1</td>
+                    <td th:text="${teamWithScore.team.name}" class="col-centered">Borci</td>
+                    <td class="col-centered">
 
                         <span th:if="${teamWithScore.team.teamId != null}"
                               th:text="${teamWithScore.score}">
                         </span>
 
                     </td>
-                    <td align="center">
+                    <td class="col-centered">
                         <a href="#"
                            class="btn btn-default btn-lg" th:href="@{/game/score/team(teamId=${teamWithScore.team.teamId})}">
                             Detail skóre
