pridany testcases pro tymovou cast aplikace

--- a/src/main/resources/templates/client/contact.html
+++ b/src/main/resources/templates/client/contact.html
@@ -25,7 +25,7 @@
             <h2>Telefon</h2>
             <p th:text="${contact.phoneNumber}" align="center">Telefon</p>
             <h2>Odkazy</h2>
-            <a th:href="${contact.webPages}">CN Group</a>
+            <a th:href="${contact.webPages}">CN Group</a><br>
             <a th:href="${contact.fcbEvent}">Facebook</a>
         </div>
     </div>
