--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -81,7 +81,7 @@
                 <p th:text="${'GPS: ' + cypher.location.y + ' ' + cypher.location.x}"></p>
                 <p th:text="${cypher.placeDescription}"></p>
                 <div id="map" style='width: 100%; height: 150px;'></div>
-                <a th:href="@{https://www.google.com/maps/search/?api=1&query={lat},{lng}(lat=${cypher.location.y}, lng=${cypher.location.x})}"
+                <a th:href="@{${cypher.mapAddress}}"
                         target="_blank" class="btn btn-secondary" role="button">Zobrazit na mapě</a>
             </div>
         </div>
