pridan prehled tymu do Organizatorske casti, aby byl videt stav sifer pro jednotlive tymy

--- a/src/main/resources/templates/fragments/organizerHeader.html
+++ b/src/main/resources/templates/fragments/organizerHeader.html
@@ -15,6 +15,9 @@
                     <li class="nav-item" th:classappend="${activeTab == 'progress'}? 'active' : null">
                         <a class="nav-link" href="/game/progress">Přehled šifer<span class="sr-only">(current)</span></a>
                     </li>
+                    <li class="nav-item" th:class="${activeTab == 'teamView'}? 'active' : null">
+                        <a class="nav-link" href="/game/progress/teamsList">Přehled týmů</a>
+                    </li>
                     <li class="nav-item" th:class="${activeTab == 'score'}? 'active' : null">
                         <a class="nav-link" href="/game/score">Score</a>
                     </li>
