--- a/src/main/resources/templates/progress/teamDetail.html
+++ b/src/main/resources/templates/progress/teamDetail.html
@@ -28,7 +28,9 @@
                         <div class="col-12">
                             <p th:classappend="${#strings.toLowerCase(status)}">
                                 <span th:text="${cypher.name}" class="name">Bamboo</span>
-                                <span class="status" th:if="${cyphersStatuses.get(cypher.cypherId)}" th:text="${status}"></span>
+                                <a th:href="@{/game/progress/stage(cypherId=${cypher.cypherId})}">
+                                    <span class="status" th:if="${cyphersStatuses.get(cypher.cypherId)}" th:text="${status}"></span>
+                                </a>
                             </p>
                         </div>
                     </div>
