add back button parameter in header, use in templates delete additional header

--- a/src/main/resources/templates/client/finalplace/detail.html
+++ b/src/main/resources/templates/client/finalplace/detail.html
@@ -14,8 +14,7 @@
     <title>Místo vyhlášení</title>
 </head>
 <body>
-
-<div th:insert="client/fragments/headerWithBackButton"></div>
+<div th:insert="client/fragments/header :: header(cypher, true)"></div>
 
 <div class="container">
     <div class="row">
