--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -15,7 +15,7 @@
     <title>Šifry</title>
 </head>
 <body>
-    <div th:insert="client/fragments/header :: header(cypher)"></div>
+    <div th:insert="client/fragments/header :: header(cypher, false)"></div>
 
     <div class="container">
 
