--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -3,8 +3,12 @@
 <head>
 </head>
 <body>
-<div th:fragment="header(activeTab)">
+<div th:fragment="header(activeTab, backButtonPresent)">
     <nav class="navbar navbar-default navbar-red">
+        <button th:if="${backButtonPresent}" class="btn" type="button" onclick="javascript:window.history.back()">
+            <i class="fas fa-chevron-left"></i>
+        </button>
+
         <div class="navbar-content">
             <p class="team-name" th:text="${team.name}"></p>
             <p th:unless="${score} == null" th:text="|Aktuální skóre: ${score} b.|"></p>
