--- a/src/main/resources/templates/client/hint/list.html
+++ b/src/main/resources/templates/client/hint/list.html
@@ -15,7 +15,7 @@
     <title>Nápověda</title>
 </head>
 <body>
-    <div th:insert="client/fragments/headerWithBackButton"></div>
+    <div th:insert="client/fragments/header :: header(cypher, true)"></div>
 
     <div class="container">
 
