back button rework

--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -6,7 +6,7 @@
 <div th:fragment="header(activeTab, backButtonPresent, parentScreen)">
     <nav class="navbar navbar-default navbar-red">
         <button th:if="${backButtonPresent}" class="btn" type="button">
-            <a href="/" + ${parentScreen}><i class="fas fa-chevron-left"></i></a>
+            <a th:href="${parentScreen}"><i class="fas fa-chevron-left"></i></a>
         </button>
 
         <div class="navbar-content">
