refactor fragment header, add class for white chevron

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -131,9 +131,10 @@ nav .back {
     color: #757575;
 }
 
-.fas.fa-chevron-left {
+.whiteChevronLeft {
     color: white;
 }
+
 .team {
     border-bottom: solid 1px #E5E5E5;
     padding-top: 0.3rem;
