--- a/src/main/resources/templates/client/contact.html
+++ b/src/main/resources/templates/client/contact.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div th:insert="client/fragments/header :: header(contact)"></div>
+<div th:insert="client/fragments/header :: header(contact, '')"></div>
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
