--- a/src/main/resources/templates/client/finalplace/detail.html
+++ b/src/main/resources/templates/client/finalplace/detail.html
@@ -14,7 +14,7 @@
     <title>Místo vyhlášení</title>
 </head>
 <body>
-<div th:insert="client/fragments/header :: header(cypher, true, '/cypher')"></div>
+<div th:insert="client/fragments/header :: header(cypher, '/cypher')"></div>
 
 <div class="container">
     <div class="row">
