use white chevron

--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -6,7 +6,7 @@
 <div th:fragment="header(activeTab, parentScreen)">
     <nav class="navbar navbar-default navbar-red">
         <button th:unless="${parentScreen} == ''" class="btn back" type="button">
-            <a th:href="${parentScreen}"><i class="fas fa-chevron-left whiteChevronLeft"></i></a>
+            <a th:href="${parentScreen}"><i class="fas fa-chevron-left text-white"></i></a>
         </button>
 
         <div class="navbar-content">
