--- a/src/main/resources/templates/cypher/form.html
+++ b/src/main/resources/templates/cypher/form.html
@@ -61,8 +61,8 @@
                         <p class="error" th:if="${#fields.hasErrors('placeDescription')}" th:errors="*{placeDescription}">Place Description error.</p>
                     </div>
                     <div class="form-group">
-                        <label for="mapAddress">Adresa mapy</label>
-                        <input type="url" id="mapAddress" class="form-control" th:field="*{mapAddress}"/>
+                        <label for="mapAddress" class="input-value-required">Adresa mapy</label>
+                        <input type="url" id="mapAddress" class="form-control" th:field="*{mapAddress}" required/>
                         <p class="error" th:if="${#fields.hasErrors('mapAddress')}" th:errors="*{mapAddress}">Map address error.</p>
                     </div>
                     <button type="submit" class="btn btn-primary">Uložit</button>
