opraveno typo odstranena value v kontroleru pridan prazdny list do catch bloku vyjimky

--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -28,7 +28,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Hledat</button>
             </form>
-            <div class="col-sm-6" th:if="${search.searchString} != ''">
+            <div class="col-sm-6" th:if="${search.searchString} != null">
                 <a href="#" th:href="@{/game/progress/stage(cypherId=${cypher.cypherId})}" class="btn btn-primary">Zobrazit všechny týmy</a>
             </div>
 
