--- a/src/main/resources/templates/client/cypher/trap.html
+++ b/src/main/resources/templates/client/cypher/trap.html
@@ -17,7 +17,7 @@
             <div class="col-sm-12 col-centered">
                 <p class="trapText">Tak tohle není správná odpověď 3:]</p>
                 <img src="/img/billy.jpg" alt="Billy Saw" class="img-billy"/>
-                <a class="btn btn-under-image" onclick="javascript:history.go(-1)" role="button">
+                <a class="btn btn-under-image" th:href="'/cypher/' + ${cypher.cypherId}" role="button">
                     Zkusit znovu
                 </a>
             </div>
