--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -364,7 +364,7 @@ a:hover{
     padding: .35rem .65rem;
 }
 
-.trapText {
+.big-centered-text {
     font-size: 1.25rem;
     color: #757575;
     margin-top: 1.25rem;
