move external scripts to fragment, add external scripts fragment before end of body in views

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -158,5 +158,6 @@
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDseyIGXP_QJWmaCbjVJxxVUQ5vxX44Anw&callback=initMap">
         </script>
     </div>
+    <div th:insert="fragments/externalScripts :: externalScripts"></div>
 </body>
 </html>
