--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -60,5 +60,6 @@
             </div>
         </div>
     </a>
+    <div th:insert="fragments/externalScripts :: externalScripts"></div>
 </body>
 </html>
