--- a/src/main/resources/templates/cypher/form.html
+++ b/src/main/resources/templates/cypher/form.html
@@ -66,6 +66,7 @@
         </div>
     </div>
 
+    <div th:insert="fragments/externalScripts :: externalScripts"></div>
     <script th:src="@{/js/admin-map.js}"></script>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDseyIGXP_QJWmaCbjVJxxVUQ5vxX44Anw&callback=initMap">
