--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -79,6 +79,8 @@
     <br>
     <a href="#" th:href="@{../admin/cypher}"><b>Zpět na seznam šifer</b></a>
 </div>
+
+<div th:insert="fragments/externalScripts :: externalScripts"></div>
 </body>
 </html>
 
