--- a/src/main/resources/templates/score/team.html
+++ b/src/main/resources/templates/score/team.html
@@ -36,5 +36,7 @@
     <br>
     <a href="#" th:href="@{/game/score}"><b>Zpět na seznam týmů</b></a>
 </div>
+
+<div th:insert="fragments/externalScripts :: externalScripts"></div>
 </body>
 </html>
