--- a/src/main/resources/templates/client/cypher/trap.html
+++ b/src/main/resources/templates/client/cypher/trap.html
@@ -16,5 +16,6 @@
             </div>
         </div>
     </div>
+    <div th:insert="fragments/externalScripts :: externalScripts"></div>
 </body>
 </html>
