--- a/src/main/resources/templates/client/hint/list.html
+++ b/src/main/resources/templates/client/hint/list.html
@@ -57,5 +57,6 @@
             </div>
         </div>
     </div>
+    <div th:insert="fragments/externalScripts :: externalScripts"></div>
 </body>
 </html>
