--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -79,6 +79,7 @@
     </div>
 </div>
 
+<div th:insert="fragments/externalScripts :: externalScripts"></div>
 <script th:inline="javascript">
     /*<![CDATA[*/
     var teamId = /*[[${team.teamId}]]*/ "teamId",
