--- a/src/main/resources/templates/progress/teamDetail.html
+++ b/src/main/resources/templates/progress/teamDetail.html
@@ -24,14 +24,12 @@
 
             <div th:each="cypher : ${cyphers}" class="cypher organizer">
                 <th:block th:with="status=${cyphersStatuses.get(cypher.cypherId)}">
-                    <div class="row align-items-center">
+                    <a class="row align-items-center" th:href="@{/game/progress/stage(cypherId=${cypher.cypherId})}">
                         <div th:classappend="${#strings.toLowerCase(status)}" class="col-12">
                             <span th:text="${cypher.name}" class="name">Bamboo</span>
-                            <a th:href="@{/game/progress/stage(cypherId=${cypher.cypherId})}">
-                                <span class="status" th:if="${cyphersStatuses.get(cypher.cypherId)}" th:text="${status}"></span>
-                            </a>
+                            <span class="status" th:if="${cyphersStatuses.get(cypher.cypherId)}" th:text="${status}"></span>
                         </div>
-                    </div>
+                    </a>
                 </th:block>
             </div>
         </div>
